--- a/server/src/MeDesenvolveIA.Shareable/MeDesenvolveIA.Shareable.csproj
+++ b/server/src/MeDesenvolveIA.Shareable/MeDesenvolveIA.Shareable.csproj
@@ -7,14 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
-    <Folder Include="Validators\" />
     <Folder Include="Settings\" />
-    <Folder Include="Responses\" />
-    <Folder Include="Requests\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Divino.OperationResult" Version="4.0.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.0.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
   </ItemGroup>
